first form and spacing fix

--- a/css/main.less
+++ b/css/main.less
@@ -13,6 +13,10 @@
 
 @navHeight: 60px;
 
+h1,h2,h3,h4,h5,h6 {
+	font-weight: normal;
+}
+
 /* Basic helpers ==================================== */
 /* ================================================== */
 /* ================================================== */
@@ -70,6 +74,11 @@
 	.button--section-jump;
 }
 
+.button--book-myef {
+	.button;
+	.button--white-outline;
+}
+
 /* Global =========================================== */
 /* ================================================== */
 /* ================================================== */
@@ -95,16 +104,15 @@ body {
 
 
 .bg1 {
-
+	background: rgb(255,238,173);
 }
 
 .bg2 {
-	// background: none;
-	// color: #000;
+	background: rgb(210,234,228);
 }
 
 .bg3 {
-	// background: #FFD1BA;
+	background: rgb(250,204,187);
 }
 
 .bg5 {
@@ -120,11 +128,13 @@ body {
 .site-navigation {
 	position: absolute;
 	left: 0;
-	top: 180px;
+	top: 280px;
 	z-index: 10;
 	width: 200px;
 	padding-left: 30px;
 	padding-right: 30px;
+	font-size: 15px;
+	letter-spacing: 2px;
 
 	@media @mobile {
 		top: 0;
@@ -147,7 +157,7 @@ body {
 
 .site-navigation.fixed {
 	position: fixed;
-	top: 180px;
+	top: 280px;
 	@media @mobile {
 		position: -webkit-sticky;
 		position: -moz-sticky;
@@ -167,8 +177,8 @@ body {
 	display: block;
 	overflow: hidden;
 	margin-left: -11px;
-	margin-bottom: 20px;
-	margin-top: 9px;
+	margin-bottom: 34px;
+	margin-top: -8px;
 	@media @mobile {
 		display: none;
 	}	
@@ -176,7 +186,6 @@ body {
 
 .site-navigation__link {
 	display: block;
-	font-weight: bold;
 	text-decoration: none;
 	cursor: pointer;
 
@@ -343,7 +352,7 @@ body {
 	padding: 40px 0;
 	font-size: 33px;
 	line-height: 130%;
-	background: #EF3C66;
+	background: #333;
 
 	@media @mobile {
 		padding: 40px 0;
@@ -360,12 +369,12 @@ body {
 .page-section__header {
 	float: left;
 	width: 28%;
-	padding-top: 180px;
+	margin-top: 336px;
 	opacity: 0;
 	position: fixed;
 	top: 0;
 	transition: opacity 0.4s;
-	z-index: 2;
+	z-index: 3;
 
 	.page-section.active & {
 		opacity: 1;
@@ -393,17 +402,20 @@ body {
 
 .page-section__header h2 {
 	line-height: 44px;
+	position: absolute;
+	bottom: 100%;
+	font-weight: normal;
 }
 
 .page-section__header__body {
-	font-family: @font-family-serif;
+	// font-family: @font-family-serif;
 	font-size: 20px;
 }
 
 .page-section__body {
 	float: right;
-	width: 50%;
-	padding-top: 180px;
+	width: 75%;
+	padding-top: 280px;
 	padding-bottom: 180px;
 	opacity: 0;
 	transition: opacity 0.4s;
@@ -426,6 +438,10 @@ body {
 		opacity: 1;
 	}	
 
+	img {
+		width: 100%;
+	}
+
 }
 
 
@@ -434,6 +450,7 @@ body {
 	padding-top: 0;
 	padding-bottom: 240px;
 	min-height: 800px;
+	width: 50%;
 }
 
 .bg-image {
@@ -474,22 +491,16 @@ fieldset {
 	border: none;
 }
 
-input[type="text"], 
-input[type="email"],
-select {
+.form-container input[type="text"], 
+.form-container input[type="email"],
+.form-container select {
 	width: 100%;
 	background: none;
-	border: none;
-	border-bottom: 2px solid #fff;
-	outline: none;
-	box-shadow: none;
-	font-size: 32px;
-	-webkit-appearance: none;
-	-webkit-border-radius: 0px;
-	min-height: 50px;
+	border-color: #fff;
 	color: #fff;
-	font-family: Georgia;
-	font-style: italic;	
+	font-size: 16px;
+	text-transform: uppercase;
+	padding: 10px 10px;
 }
 
 .button--submit {
